# vibecoin

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
bitcoin-cpp/: README.md
src/: base58.rs  header_store.rs  listener.rs  main.rs  p2p.rs  rpc.rs  storage.rs  util.rs  utils.rs
