[package]
name = "vibecoin"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bitcoin = { version = "0.32.6", features = ["std"] }
rand = "0.8"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4.7", features = ["derive"] }
hyper = { version = "0.14", features = ["http1", "server", "runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10.1"
dirs = "5.0"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
